# ECS-Pattern

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/Component/: Component.h  ComponentManager.h  PositionComponent.h  RenderComponent.h  VelocityComponent.h
include/Entity/: Entity.h  EntityManager.h
include/System/: MovementSystem.h  RenderSystem.h  System.h  SystemManager.h
src/: main.cpp
src/Component/: CMakeLists.txt  ComponentManager.cpp
src/Entity/: CMakeLists.txt  EntityManager.cpp
src/System/: CMakeLists.txt  MovementSystem.cpp  RenderSystem.cpp  SystemManager.cpp
